added: lost class

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </ul>
         </nav>
         <address class="nav_contacts">
-          <ul>
+          <ul class="nav_contacts_list">
             <li>
               <a class="contact_link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
@@ -65,29 +65,29 @@
       <section class="section principles">
         <div class="container">
           <h2 class="visually_hidden">Our Principles</h2>
-          <ul>
-            <li>
+          <ul class="principles_cards_grid">
+            <li class="principles_card">
               <h3 class="block_header">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="principles_card">
               <h3 class="block_header">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="principles_card">
               <h3 class="block_header">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="principles_card">
               <h3 class="block_header">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -152,7 +152,7 @@
         <div class="container">
           <h2 class="section_header">Our Portfolio</h2>
           <ul class="portfolio_grid">
-            <li>
+            <li class="portfolio_card">
               <img
                 src="./images/banking-app.jpg"
                 alt="Banking application preview"
@@ -163,7 +163,7 @@
                 <p class="text">App</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio_card">
               <img
                 src="./images/cashless-payment.jpg"
                 alt="Cashless payment in action"
@@ -174,7 +174,7 @@
                 <p class="text">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio_card">
               <img
                 src="./images/meditation-app.jpg"
                 alt="Mediation application first screen"
@@ -185,7 +185,7 @@
                 <p class="text">App</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio_card">
               <img
                 src="./images/taxi-service.jpg"
                 alt="Chauffeur in car"
@@ -196,7 +196,7 @@
                 <p class="text">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio_card">
               <img
                 src="./images/wallpapers.jpg"
                 alt="Wallpapers presentation"
@@ -207,7 +207,7 @@
                 <p class="text">Design</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio_card">
               <img
                 src="./images/online-courses.jpg"
                 alt="Vivid girl doing video call with her phone"
